# powershow

./: db.sqlite3  endpoint_test.py  huawei.py  manage.py  pyproject.toml
lobby/: data.py  urls.py  views.py
lobby/fusion_solar_py/: client.py
lobby/static/lobby/: script.js  styles.css
lobby/templates/lobby/: index.html
powershow/: asgi.py  settings.py  urls.py  wsgi.py
