[tool.poetry]
name = "powershow"
version = "0.1.0"
description = ""
authors = ["Alexander Holmbäck <alexander.holmback@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
django = "^4.2.6"
astropy = "^5.3.4"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
